lanecwe-Prod/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Copy_del__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_copy__c</fullName>
        <description>Set value with workflow rule to copy the Account Name over so that we can see it within Sharing Rules</description>
        <label>Account Name (copy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>used for Hubspot</description>
        <formula>(TEXT(Account.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Status of the Contact&apos;s Account</inlineHelpText>
        <label>z-m-Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_moderator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active moderator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Marketing_Info__c</fullName>
        <inlineHelpText>Provides information relevant to how this lead was generated from the marketing team that collected it.</inlineHelpText>
        <label>Additional Marketing Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Flag_Text__c</fullName>
        <label>Admin Flag (Text)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_to_ID__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Bill to ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_New__c</fullName>
        <formula>TEXT( Owner_Copy__r.Channel__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care/Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin&amp;Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Video Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chat_ID_Temp__c</fullName>
        <label>xHOLD-Chat ID (Temp)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Client ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Add_Date__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Company Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Company ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference_ID__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Conference ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference_Title__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Conference Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Department_Kanji__c</fullName>
        <label>Contact Department (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Kana__c</fullName>
        <label>Contact Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This customer has been approved by Sales as a customer reference and/or testimonial participant</inlineHelpText>
        <label>Customer Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEDUPE_Account_Name__c</fullName>
        <description>Used to house the Account Name prior to its being merged with another account name.</description>
        <inlineHelpText>Shows the Account this merged Contact used to be associated with.</inlineHelpText>
        <label>Prior Contact Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>x-Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>x-Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Opt_Out__c</fullName>
        <inlineHelpText>Date this record opted out of receiving CEM (commercial electronic messages) from PGi.  Will Default to the date the record was created in SFDC.</inlineHelpText>
        <label>Date of Opt-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Opt_in__c</fullName>
        <inlineHelpText>Date this record opted in to receiving CEM (commercial electronic messages) from PGi</inlineHelpText>
        <label>Date of Opt-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Authority__c</fullName>
        <label>Decision Making Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Executive (CEO, COO, CFO, CIO, President)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Partner/VP/SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service/Care/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec - &quot;C&quot; Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Generalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_from_email_address__c</fullName>
        <formula>IF(
AND(
       !    CONTAINS(Email, &quot;gmail&quot;),
       !    CONTAINS(Email, &quot;google&quot;),
       !    CONTAINS(Email, &quot;hotmail&quot;),
       !    CONTAINS(Email, &quot;mail.com&quot;),
       !    CONTAINS(Email, &quot;yahoo&quot;),
       !    CONTAINS(Email, &quot;gmx&quot;),
       !    CONTAINS(Email, &quot;zoho&quot;),
       !    CONTAINS(Email, &quot;gawab&quot;),
       !    CONTAINS(Email, &quot;aol&quot;),
       !    CONTAINS(Email, &quot;aim&quot;),
       !    CONTAINS(Email, &quot;lavabit&quot;),
       !    CONTAINS(Email, &quot;excite&quot;),
       !    CONTAINS(Email, &quot;lycos&quot;),
       !    CONTAINS(Email, &quot;sbc&quot;),
       !    CONTAINS(Email, &quot;comcast&quot;),
       !    CONTAINS(Email, &quot;msn.com&quot;),
       !    CONTAINS(Email, &quot;mac.com&quot;)
),
RIGHT(Email, LEN(Email) - FIND(&quot;@&quot;,Email)), &quot;Not a valid Company domain&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>converts the email address to a suggested website for this contact</inlineHelpText>
        <label>Domain (from email address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECommerce_Account_Number__c</fullName>
        <label>ECommerce Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECommerce_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECommerce Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_Score__c</fullName>
        <label>Eloqua Contact Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Enterprise</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM2_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM2 Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HBSPT_BC_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track that something came in from the Hubspot Budget Conferencing Portal</description>
        <label>HBSPT-BC Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HBSPT_GUID__c</fullName>
        <externalId>true</externalId>
        <label>HBSPT - GUID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HBSPT_PGi_com_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track that something came in from the PGi.com Portal</description>
        <label>HBSPT-PGi.com Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HBSPT_iMeet_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track that something came in from the Hubspot iMeet.com Portal</description>
        <label>HBSPT-iMeet Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used as error in setting the standard field</description>
        <label>Hubspot Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_Account_Cancelled__c</fullName>
        <label>IM-Account Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_AvgAttendees__c</fullName>
        <label>IM-AvgAttendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_BillToFirstName__c</fullName>
        <label>IM-BillToFirstName</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_BillToLastName__c</fullName>
        <label>IM-BillToLastName</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_BillingStartDate__c</fullName>
        <label>IM-BillingStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Company__c</fullName>
        <label>IM-Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_CreditCardOnFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM-CreditCardOnFile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_Email_Notification_Address__c</fullName>
        <label>IM-Email Notification Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IM_Last_Room_Login__c</fullName>
        <label>IM-Last Room Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Last_iMeet_Room_Login__c</fullName>
        <label>IM-Last iMeet Room Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Location__c</fullName>
        <label>IM-Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_MaxAttendees__c</fullName>
        <label>IM-MaxAttendees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MeetingsLast30Days__c</fullName>
        <label>IM-MeetingsLast30Days</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MeetingsLast60Days__c</fullName>
        <label>IM-MeetingsLast60Days</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MeetingsLast90Days__c</fullName>
        <label>IM-MeetingsLast90Days</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MostRecentMeeting__c</fullName>
        <label>IM-MostRecentMeeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_OfferExpires__c</fullName>
        <label>IM-OfferExpires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_PGiClientID__c</fullName>
        <label>IM-PGiClientID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PGiConfID__c</fullName>
        <label>IM-PGiConfID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PGi_Acct_ID__c</fullName>
        <label>IM-PGi Acct ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Phone_1__c</fullName>
        <label>IM-Phone 1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Phone_2__c</fullName>
        <label>IM-Phone 2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PromotionCode__c</fullName>
        <label>IM-PromotionCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Room_URL__c</fullName>
        <label>IM-Room URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IM_Sign_up_Date__c</fullName>
        <label>IM-Sign-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Text_Notification__c</fullName>
        <label>IM-Text Notification #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Total_Attendees__c</fullName>
        <formula>IM_AvgAttendees__c * IM_Total_Meetings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Avg attendees * total meetings</inlineHelpText>
        <label>IM-Total Attendees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Total_Meetings__c</fullName>
        <label>IM-Total Meetings</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Updated_At__c</fullName>
        <label>IM-Updated At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_UsageDeleteDate__c</fullName>
        <label>IM-UsageDeleteDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>IM-User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_WebCamUsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM-WebCamUsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this checkbox if you feel this record is of no use anymore.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <description>this is for EMEA to use for email marketing</description>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>EN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_modified_Date_by_non_admin__c</fullName>
        <description>Date/Time field that is set via WF Rule whenever a non-admin updates an Account in SFDC. Used to see rep neglecting account trends, etc.</description>
        <label>Last modified Date by (non-admin)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_usage_month__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Last usage month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shows a lead record that relates to this contact</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Contacts</relationshipLabel>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_New__c</fullName>
        <formula>Owner_Copy__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This defaults from Owners location and will be read only.</description>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_ID_Temp__c</fullName>
        <label>xHOLD-Mail ID (Temp)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Channel__c</fullName>
        <label>Marketing Channel</label>
        <picklist>
            <picklistValues>
                <fullName>NA: Demand Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Strat Comms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: Baking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In_Timestamp__c</fullName>
        <label>Marketing Opt-In Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderator_Add_Date__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Moderator Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Moderator_Deactivation_Date__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Moderator Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Moderator_Status__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Moderator Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NZL_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact flag for New Zealand Contacts that will be used to hide visibility</description>
        <label>NZL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Dialed__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <inlineHelpText>numbers that the moderator normally uses to dial into the conference rooms</inlineHelpText>
        <label>Number Dialed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Copy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Region_New__c</fullName>
        <formula>TEXT( Owner_Copy__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>This will defaulted with Owner&apos;s region and read only</description>
        <label>Owner_Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGi_Email__c</fullName>
        <label>PGi Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PGi_First_Name__c</fullName>
        <label>PGi First Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGi_Last_Name__c</fullName>
        <label>PGi Last Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGi_Phone__c</fullName>
        <label>PGi Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Connect_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This  represents the PartnerConnect Admin, at the Partner organization, who will be the main point of contact for the PartnerConnect portal.  RW mapping will recognize this individual as the one who receives the initial Welcom e-mail triggered upon Partner approval by PGi.</description>
        <label>PC Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Name_Nickname__c</fullName>
        <label>Preferred Name/Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RK_Email__c</fullName>
        <inlineHelpText>Shows the RainKing Email in case the primary is different than the one RainKing stores.</inlineHelpText>
        <label>RK-Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RK_Phone__c</fullName>
        <inlineHelpText>Shows the RainKing phone number in case it is different than the primary in the RainKing database.</inlineHelpText>
        <label>RK-Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RW_Contact_ID__c</fullName>
        <description>Partner Connect unique ID for Contact records</description>
        <label>PC Person ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booker – Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booker – Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booker – Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booker – Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>